// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search Basic search renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div>
      <button
        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="mr6"
        >
          <svg
            className="icon w18 h18"
          >
            <use
              xlinkHref="#icon-search"
            />
          </svg>
        </span>
         
        Search
      </button>
    </div>
  </div>
</div>
`;

exports[`search Basic search with \`site\` set to show filter toggle renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div>
      <button
        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="mr6"
        >
          <svg
            className="icon w18 h18"
          >
            <use
              xlinkHref="#icon-search"
            />
          </svg>
        </span>
         
        Search
      </button>
    </div>
  </div>
</div>
`;

exports[`search Search with \`disableModal\` option set renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div
      className="w-full"
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-labelledby="search3-label"
        aria-owns={null}
        role="combobox"
      >
        <label
          className="cursor-pointer"
          htmlFor="search3-input"
          id="search3-label"
        >
          <div
            className="absolute flex-parent flex-parent--center-cross flex-parent--center-main w36 h36"
          >
            <svg
              className="icon color-gray "
            >
              <title>
                Search
              </title>
              <use
                xlinkHref="#icon-search"
              />
            </svg>
          </div>
        </label>
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls={null}
          aria-labelledby="search3-label"
          autoComplete="off"
          className="input bg-white px36 h36"
          id="search3-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search docs.mapbox.com"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`search Search with \`narrow\` option set renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div>
      <button
        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
        onClick={[Function]}
        style={
          Object {
            "paddingLeft": "12px",
            "paddingRight": "12px",
          }
        }
      >
        <span
          className=""
        >
          <svg
            className="icon w18 h18"
          >
            <title>
              Search
            </title>
            <use
              xlinkHref="#icon-search"
            />
          </svg>
        </span>
         
      </button>
    </div>
  </div>
</div>
`;

exports[`search Search with \`narrow\` option set renders as expected 2`] = `
<div>
  <div
    className="border-t border-b border--gray-light bg-white"
    data-swiftype-index="false"
  >
    <div
      className="limiter"
    >
      <div
        className="grid grid--gut36 mr-neg36 mr0-mm"
      >
        <div
          className="col col--4-mm col--12"
        >
          <div
            className="ml24-mm  flex-parent flex-parent--center-cross"
            style={
              Object {
                "height": 52,
              }
            }
          >
            <a
              className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-blue-on-hover"
              href="/api/"
            >
              API Documentation
            </a>
          </div>
        </div>
        <div
          className="col col--6-mm col--12 flex-parent flex-parent--main-mm flex-parent--center-cross align-r mb12 mb0-mm"
        >
          <div
            className="clearfix"
          >
            <div
              className="fl"
            >
              <button
                aria-label="one"
                className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
                data-test="one"
                onClick={[Function]}
                type="button"
              >
                Label one
              </button>
            </div>
            <div
              className="fl"
            >
              <button
                aria-label="two"
                className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
                data-test="two"
                onClick={[Function]}
                type="button"
              >
                Label two
              </button>
            </div>
            <div
              className="fl"
            >
              <button
                aria-label="three"
                className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
                data-test="three"
                onClick={[Function]}
                type="button"
              >
                Label three
              </button>
            </div>
            <div
              className="fl"
            >
              <button
                aria-label="four"
                className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
                data-test="four"
                onClick={[Function]}
                type="button"
              >
                Label four
              </button>
            </div>
            <div
              className="fl"
            >
              <div
                className="inline-block"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-label="More"
                  className="px6 py12 mr12 align-l cursor-pointer none-mm"
                  type="button"
                >
                  More +
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col col--2-mm col--12 flex-parent flex-parent--end-main-mm flex-parent--center-cross"
        >
          <div
            className="w-full mb12 mb0-mm mr36"
          >
            <div
              className="h36 relative"
            >
              <div>
                <div>
                  <button
                    className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="mr6"
                    >
                      <svg
                        className="icon w18 h18"
                      >
                        <use
                          xlinkHref="#icon-search"
                        />
                      </svg>
                    </span>
                     
                    Search
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--4-mm  col--12 bg-gray-faint"
        data-swiftype-index="false"
      >
        <div
          className="sticky-outer-wrapper"
          style={Object {}}
        >
          <div
            className="sticky-inner-wrapper"
            style={
              Object {
                "position": "relative",
                "top": "0px",
                "zIndex": 3,
              }
            }
          >
            <div
              className="pt12-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled block"
              id="dr-ui--page-layout-sidebar"
            >
              <div
                className="txt-l color-blue txt-fancy mb12 block-mm none mx24"
              >
                Section title
              </div>
              <div
                className="dr-ui--navigation-accordion"
              >
                <div
                  className="block-mm none"
                >
                  <div
                    className="px12 block-mm none bg-lighten75"
                  >
                    <div
                      className="py3 "
                    >
                      <a
                        className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                        href="page-one"
                      >
                        <div
                          className="pl12 py12 txt-bold txt-m flex-child color-black"
                        >
                          Title one
                          
                        </div>
                      </a>
                      <div
                        className="ml24 pt0"
                      >
                        <ul
                          className="txt-m pb12 inline-block-mm none unprose"
                        >
                          <li
                            className="mb6"
                          >
                            <a
                              className="color-blue-on-hover"
                              href="#heading-one"
                              id="#heading-one-sidebar"
                            >
                              Heading one
                              
                            </a>
                            <ul
                              className="none"
                            />
                          </li>
                          <li
                            className="mb6"
                          >
                            <a
                              className="color-blue-on-hover"
                              href="#heading-two"
                              id="#heading-two-sidebar"
                            >
                              Heading two
                              
                            </a>
                            <ul
                              className="none"
                            />
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                  <div
                    className="px12 block-mm none"
                  >
                    <div
                      className="py3  border-t border--gray-light"
                    >
                      <a
                        className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                        href="page-two"
                      >
                        <div
                          className="pl12 py12 txt-bold txt-m flex-child"
                        >
                          Title two
                          
                        </div>
                        <div
                          className="flex-child flex-child--no-shrink"
                        >
                          <svg
                            className="events-none icon"
                            focusable="false"
                            role="presentation"
                            style={
                              Object {
                                "height": 18,
                                "width": 18,
                              }
                            }
                          >
                            <use
                              xlinkHref="#icon-chevron-down"
                              xmlnsXlink="http://www.w3.org/1999/xlink"
                            />
                          </svg>
                        </div>
                      </a>
                      
                    </div>
                  </div>
                </div>
                <div
                  className="none-mm block bg-gray-faint px24 py24"
                >
                  <div
                    className="relative "
                  >
                    <div
                      className="select-container "
                    >
                      <select
                        aria-required={true}
                        className="select select--stroke round-full bg-white"
                        data-test="navigate-this-section-select"
                        disabled={false}
                        id="navigate-this-section"
                        onChange={[Function]}
                        value="page-one"
                      >
                        <option
                          value="page-one"
                        >
                          Title one
                        </option>
                        <option
                          value="page-two"
                        >
                          Title two
                        </option>
                      </select>
                      <div
                        className="select-arrow"
                      />
                    </div>
                    <div
                      role="alert"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col col--8-mm  col--12 mt24-mm mb60 pr0-mm px36-mm"
        id="docs-content"
      >
        <div
          className="prose"
        >
          <h1>
            Title
          </h1>
          <p>
            Vestibulum id ligula porta felis euismod semper. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula porta felis euismod semper.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`search Search with custom connector renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div>
      <button
        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="mr6"
        >
          <svg
            className="icon w18 h18"
          >
            <use
              xlinkHref="#icon-search"
            />
          </svg>
        </span>
         
        Search
      </button>
    </div>
  </div>
</div>
`;

exports[`search Search with dark background, custom placeholder renders as expected 1`] = `
<div
  className="py24 px24 bg-gray-dark"
>
  <div
    className="w-full"
  >
    <div
      className="h36 relative"
    >
      <div>
        <div>
          <button
            className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke btn--white"
            onClick={[Function]}
            style={Object {}}
          >
            <span
              className="mr6"
            >
              <svg
                className="icon w18 h18"
              >
                <use
                  xlinkHref="#icon-search"
                />
              </svg>
            </span>
             
            Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
